--- a/index.html
+++ b/index.html
@@ -1,10 +1,31 @@
 <!DOCTYPE html>
+
+
+
+<head>
+    <script src="https://cdn.plot.ly/plotly-2.26.2.min.js" charset="utf-8"></script>
+</head>
 <body>
-<div id="text"></div>
- 
-<script>
-document.getElementById("text").innerHTML = "Text added by JavaScript code";
-</script>
+    <div id="myDiv"></div>
+
+    <script>
+var data = [
+  {
+    x: ['2013-10-04 22:23:00', '2013-11-04 22:23:00', '2013-12-04 22:23:00'],
+    y: [1, 3, 6],
+    type: 'scatter'
+  }
+
+];
+
+
+Plotly.newPlot('myDiv', data);     
+     
+    </script>
 </body>
+
+
+
 </html>
   
+
