--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 
 
 <head>
+    <title>HTML+JS Page with sci-data plot\graphics. Interactive zoome by JS. </title>
+<meta http-equiv="Cache-Control" content="max-age=3600">
+    
     <script src="https://cdn.plot.ly/plotly-2.26.2.min.js" charset="utf-8"></script>
 </head>
 <body>
