--- a/index.html
+++ b/index.html
@@ -15,14 +15,29 @@
 var data = [
   {
     x: ['2013-10-04 22:23:00', '2013-11-04 22:23:00', '2013-12-04 22:23:00'],
-    y: [1, 33, 6],
+    y: [1, 0, 6],
     type: 'scatter'
   }
+
+var layout = {
+  autosize: false,
+  width: 500,
+  height: 500,
+  margin: {
+    l: 50,
+    r: 50,
+    b: 100,
+    t: 100,
+    pad: 4
+  },
+  paper_bgcolor: '#7f7f7f',
+  plot_bgcolor: '#c7c7c7'
+};    
 
 ];
 
 
-Plotly.newPlot('myDiv', data);     
+Plotly.newPlot('myDiv', data,layout);     
      
     </script>
 </body>
