--- a/index.html
+++ b/index.html
@@ -20,24 +20,8 @@ var data = [
   }
 ];
 
-        // https://stackoverflow.com/questions/74687902/how-to-make-plotly-js-dynamically-use-the-full-height-width-of-a-div-without
 var layout = {
-    title: 'Temperature',
-    autosize: true,
-    sliders: [{
-        pad: {t: 5},
-        len: 1,
-        x: 0,
-        currentvalue: {
-            xanchor: 'right',
-            prefix: 'i: ',
-            font: {
-                color: '#888',
-                size: 20
-            }
-        },
-        steps: steps
-    }]
+autosize: true
 };
         
         
