--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 
 
@@ -9,7 +10,13 @@
     <script src="https://cdn.plot.ly/plotly-2.26.2.min.js" charset="utf-8"></script>
 </head>
 <body>
-    <div id="myDiv"></div>
+<div class="container-fluid" id="contSignalAnalyzer">	
+	<div style="height: 800px;" id="myDiv">
+		<!--Plotly Chart will be inserted here-->
+	</div>
+	<hr>
+</div>
+
 
     <script>
 var data = [
