--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <script>
 
-import { data } from "/data1.js";
+import { data } from "https://raw.githubusercontent.com/BillKek/temp_plot_test20231007/main/data1.js";
 
 var layout = {
 autosize: true
