--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 <head>
     <title>HTML+JS Page with sci-data plot\graphics. Interactive zoome by JS. </title>
 <meta http-equiv="Cache-Control" content="max-age=120">
-    
-    <script src="https://cdn.plot.ly/plotly-2.26.2.min.js" charset="utf-8"></script>
+
+<script src="https://raw.githubusercontent.com/BillKek/temp_plot_test20231007/main/data1.js" charset="utf-8"></script>
+<script src="https://cdn.plot.ly/plotly-2.26.2.min.js" charset="utf-8"></script>
 </head>
 <body>
 <div class="container-fluid" id="contSignalAnalyzer">	
@@ -19,8 +20,6 @@
 
 
     <script>
-
-import { data } from "https://raw.githubusercontent.com/BillKek/temp_plot_test20231007/main/data1.js";
 
 var layout = {
 autosize: true
