--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>HTML+JS Page with sci-data plot\graphics. Interactive zoome by JS. </title>
 <meta http-equiv="Cache-Control" content="max-age=120">
 
-<script src="https://raw.githubusercontent.com/BillKek/temp_plot_test20231007/main/data1.js" charset="utf-8"></script>
+<script src="https://billkek.github.io/temp_plot_test20231007/data1.js" charset="utf-8"></script>
 <script src="https://cdn.plot.ly/plotly-2.26.2.min.js" charset="utf-8"></script>
 </head>
 <body>
