--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <meta http-equiv="Cache-Control" content="max-age=120">
 
 <script src="https://billkek.github.io/temp_plot_test20231007/data1.js" charset="utf-8"></script>
+<script src="https://billkek.github.io/temp_plot_test20231007/data2.js" charset="utf-8"></script>
 <script src="https://cdn.plot.ly/plotly-2.26.2.min.js" charset="utf-8"></script>
 </head>
 <body>
